--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-i18next": "^11.15.3",
     "react-intl": "^5.24.8",
+    "react-is": "^18.0.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
     "react-spinners-kit": "^1.9.1",
