--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@supabase/supabase-js": "^1.29.3",
     "@supabase/ui": "^0.36.5",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^2.0.1",
+    "ajv": "^8.11.0",
+    "ajv-errors": "^1.0.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -57,7 +59,6 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
