config celo kit, g

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://bloinx-web.web.app/",
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@celo/contractkit": "^1.5.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@metamask/detect-provider": "^1.2.0",
@@ -20,6 +21,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^2.0.1",
+    "@walletconnect/web3-provider": "^1.7.8",
     "ajv": "^8.11.0",
     "ajv-errors": "^1.0.1",
     "babel-jest": "^27.4.2",
@@ -41,7 +43,6 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "formik": "^2.2.9",
-    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "http": "^0.0.1-security",
     "i18next": "^21.6.7",
@@ -52,7 +53,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "npm": "^8.3.2",
+    "net": "^1.0.2",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -67,6 +68,7 @@
     "react-intl": "^5.24.8",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
+    "react-scripts": "^4.0.3",
     "react-spinners-kit": "^1.9.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
